<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.example.android.bakingrecipe.fragments.RecipeStepDetailsFragment">

    <ScrollView
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:layout_gravity="top"
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:minHeight="300dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:contentDescription="@string/img_step_description"
                android:id="@+id/thumbnail"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/tv_step_description"
                tools:text="@string/label_step_description"
                android:padding="16dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/prev_btn"
            android:text="@string/btn_prev"
            android:onClick="prevStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/next_btn"
            android:text="@string/btn_next"
            android:onClick="nextStep"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
