<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_scroll_view_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingrecipe.fragments.RecipeStepDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/viewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/img_ingredients_icon"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cake_ingredients" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ingredients_lists"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/num_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/label_ingredients_count"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha="0.12"
            android:background="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>
